--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "dennis-postnr",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "version": "1.0.0",
-  "main": "hepp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "typescript": "~5.7.2",
+    "vite": "^6.3.1"
+  },
   "dependencies": {
     "brotli": "^1.3.3"
   }
