--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "brotli": "^1.3.3"
+    "brotli": "^1.3.3",
+    "node-gzip": "^1.1.2"
   }
 }
