--- a/package.json
+++ b/package.json
@@ -12,10 +12,5 @@
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
   },
-  "dependencies": {
-    "brotli": "^1.3.3",
-    "brotli-wasm": "^3.0.1",
-    "browserify-zlib": "^0.2.0",
-    "compress-brotli": "^1.3.12"
-  }
+  "dependencies": {}
 }
