--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "brotli": "^1.3.3",
-    "node-gzip": "^1.1.2"
+    "node-gzip": "^1.1.2",
+    "pako": "^2.1.0"
   }
 }
